--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Min GitHub-hemsida</title>
+  <title>Free Viruss!!!!</title>
 </head>
 <body>
   <h1>Hej världen!</h1>
-  <p>Detta är min hemsida på GitHub Pages.</p>
+  <p>Fake_Corny Is Sigma</p>
 </body>
 </html>
