--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
     header { display: flex; justify-content: space-between; align-items: center; padding: 20px 40px; background: rgba(255,255,255,0.03); border-bottom: 1px solid rgba(255,255,255,0.1); position: sticky; top: 0; }
 
-    header h1 { font-size: 24px; letter-spacing: 1px; }
+    .logo-container { display: flex; align-items: center; }
+    .logo-container img { width: 40px; height: 40px; margin-right: 10px; }
+    .logo-container h1 { font-size: 24px; letter-spacing: 1px; }
 
     nav a { margin-left: 25px; color: #ccc; text-decoration: none; font-size: 15px; }
     nav a:hover { color: #fff; }
@@ -42,7 +44,10 @@
 </head>
 <body>
   <header>
-    <h1>EZ Studio</h1>
+    <div class="logo-container">
+      <img src="logo.png" alt="EZ Studio Logo" />
+      <h1>EZ Studio</h1>
+    </div>
     <nav>
       <a href="#services">Tjänster</a>
       <a href="#about">Om oss</a>
