--- a/index.html
+++ b/index.html
@@ -1,62 +1,89 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-    <meta charset="UTF-8">
-    <title>License Manager</title>
-    <style>
-        body { font-family: Arial, sans-serif; padding: 20px; }
-        input, button { padding: 5px; margin: 5px; }
-        table { border-collapse: collapse; margin-top: 20px; }
-        th, td { border: 1px solid #ccc; padding: 8px; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>EZ Studio — Variant</title>
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
+
+    body { background: #0f1232; color: #fff; }
+
+    header { display: flex; justify-content: space-between; align-items: center; padding: 20px 60px; background: #0f1232; }
+    .logo-container { display: flex; align-items: center; }
+    .logo-container img { width: 40px; height: 40px; margin-right: 10px; }
+    .logo-container h1 { font-size: 22px; color: #fff; }
+
+    nav a { margin-left: 25px; color: #9aa0b0; text-decoration: none; font-size: 15px; }
+    nav a:hover { color: #2ee7ff; }
+
+    .btn-login { padding: 8px 16px; background: #2ee7ff; color: #000; border-radius: 24px; font-weight: bold; text-decoration: none; display: flex; align-items: center; }
+    .btn-login:hover { background: #1dc4e3; }
+
+    .hero { display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; padding: 120px 20px 60px; }
+    .hero h2 { font-size: 48px; color: #9ee9ff; margin-bottom: 20px; }
+    .hero p { font-size: 18px; max-width: 600px; color: #ccc; margin-bottom: 30px; }
+
+    .hero .btn-container { display: flex; gap: 20px; }
+    .hero .btn-primary, .hero .btn-secondary { padding: 12px 28px; border-radius: 24px; font-weight: bold; text-decoration: none; display: inline-block; }
+    .hero .btn-primary { background: #2ee7ff; color: #000; }
+    .hero .btn-primary:hover { background: #1dc4e3; }
+    .hero .btn-secondary { background: #262b44; color: #fff; }
+    .hero .btn-secondary:hover { background: #1f2340; }
+
+    .product-card { background: #262b44; border-radius: 12px; padding: 30px; max-width: 900px; margin: 40px auto; display: flex; gap: 30px; align-items: center; }
+    .product-info { flex: 1; }
+    .product-info h3 { font-size: 28px; margin-bottom: 10px; }
+    .product-info p { color: #bbb; margin-bottom: 8px; }
+    .product-info .price { font-size: 24px; color: #2ee7ff; margin-bottom: 15px; }
+    .product-info .btn-view { padding: 10px 20px; background: #2ee7ff; color: #000; border-radius: 24px; text-decoration: none; font-weight: bold; }
+    .product-info .btn-view:hover { background: #1dc4e3; }
+
+    .product-image img { border-radius: 8px; max-width: 400px; }
+
+    footer { padding: 40px; text-align: center; background: #0f1232; color: #666; font-size: 14px; }
+  </style>
 </head>
 <body>
-    <h1>License Manager</h1>
+  <header>
+    <div class="logo-container">
+      <img src="b8e401bd-f388-4170-ae76-e132a42623b3.png" alt="EZ Studio Logo" />
+      <h1>Ez Studio</h1>
+    </div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Products</a>
+      <a href="#">Support</a>
+      <a href="#">About</a>
+      <a href="#" class="btn-login">Login with Discord</a>
+    </nav>
+  </header>
 
-    <button onclick="createLicense()">Skapa ny licens</button>
+  <section class="hero">
+    <h2>Upgrade Your SMP Server</h2>
+    <p>Experience the next generation of Minecraft plugins. Crafted with precision, powered by Ez Studio.</p>
+    <div class="btn-container">
+      <a href="#" class="btn-primary">Get Started</a>
+      <a href="#" class="btn-secondary">View Products</a>
+    </div>
+  </section>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Licensnyckel</th>
-                <th>Giltig</th>
-                <th>Åtgärd</th>
-            </tr>
-        </thead>
-        <tbody id="licenseTable"></tbody>
-    </table>
+  <section class="product-card">
+    <div class="product-info">
+      <h3>DonutSell</h3>
+      <p>Premium Plugin</p>
+      <p>A 1:1 Replica of the DonutSMP Season 2 sell with worth lore.</p>
+      <p>Complete selling system with advanced features.</p>
+      <p class="price">$2.99</p>
+      <a href="#" class="btn-view">View Details</a>
+    </div>
+    <div class="product-image">
+      <img src="b8e401bd-f388-4170-ae76-e132a42623b3.png" alt="DonutSell Screenshot" />
+    </div>
+  </section>
 
-    <script>
-        async function fetchLicenses() {
-            const res = await fetch('/licenses');
-            const data = await res.json();
-            const table = document.getElementById('licenseTable');
-            table.innerHTML = '';
-            for (const key in data) {
-                const valid = data[key];
-                const row = document.createElement('tr');
-                row.innerHTML = `<td>${key}</td>
-                                 <td>${valid}</td>
-                                 <td><button onclick="revokeLicense('${key}')">Återkalla</button></td>`;
-                table.appendChild(row);
-            }
-        }
-
-        async function createLicense() {
-            await fetch('/create-license', { method: 'POST' });
-            fetchLicenses();
-        }
-
-        async function revokeLicense(key) {
-            await fetch('/revoke-license', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ key })
-            });
-            fetchLicenses();
-        }
-
-        fetchLicenses();
-    </script>
+  <footer>
+    <p>© 2025 Ez Studio. Alla rättigheter förbehållna.</p>
+  </footer>
 </body>
 </html>
