--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 </head>
 <body>
   <header>
-    <div class="logo-container" onclick="location.reload();">
-      <img src="icon.png" alt="EZ Studio Logo" />
-      <h1>EZ Studio</h1>
+    <div class="logo-container">
+      <img src="icon.png" alt="EZ Studio Logo" id="logo" />
+      <h1 id="logo-text">EZ Studio</h1>
     </div>
     <nav>
       <a href="#">Home</a>
@@ -61,7 +61,7 @@
 
   <section class="hero">
     <h2>Upgrade Your SMP Server</h2>
-    <p>Experience the next generation of Minecraft plugins. Crafted with precision, powered by Ez Studio.</p>
+    <p>Experience the next generation of Minecraft plugins. Crafted with precision, powered by EZ Studio.</p>
     <div class="btn-container">
       <a href="#" class="btn-primary">Get Started</a>
       <a href="#" class="btn-secondary">View Products</a>
@@ -83,7 +83,19 @@
   </section>
 
   <footer>
-    <p>© 2025 Ez Studio. Alla rättigheter förbehållna.</p>
+    <p>© 2025 EZ Studio. Alla rättigheter förbehållna.</p>
   </footer>
+
+  <script>
+    // Klick på logotypen refreshar sidan
+    document.getElementById('logo').addEventListener('click', () => {
+      location.reload();
+    });
+
+    // Klick på texten EZ Studio refreshar sidan
+    document.getElementById('logo-text').addEventListener('click', () => {
+      location.reload();
+    });
+  </script>
 </body>
 </html>
