--- a/index.html
+++ b/index.html
@@ -1,90 +1,139 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>EZ Studio — Variant</title>
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EZ Studio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        /* Grundläggande stil */
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            font-family: 'Roboto', sans-serif;
+        }
 
-    body { background: #0f1232; color: #fff; }
+        body {
+            background-color: #f4f4f4;
+            color: #333;
+            line-height: 1.6;
+        }
 
-    header { display: flex; justify-content: space-between; align-items: center; padding: 20px 60px; background: #0f1232; }
-    .logo-container { display: flex; align-items: center; cursor: pointer; }
-    .logo-container img { width: 40px; height: 40px; margin-right: 10px; }
-    .logo-container h1 { font-size: 22px; color: #fff; }
+        header {
+            background-color: #1e1e1e;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+        }
 
-    nav a { margin-left: 25px; color: #9aa0b0; text-decoration: none; font-size: 15px; }
-    nav a:hover { color: #2ee7ff; }
+        header h1 {
+            margin-bottom: 10px;
+        }
 
-    .btn-login { padding: 8px 16px; background: #2ee7ff; color: #000; border-radius: 24px; font-weight: bold; text-decoration: none; display: flex; align-items: center; }
-    .btn-login:hover { background: #1dc4e3; }
+        nav a {
+            color: #fff;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
 
-    .hero { display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; padding: 120px 20px 60px; }
-    .hero h2 { font-size: 48px; color: #9ee9ff; margin-bottom: 20px; }
-    .hero p { font-size: 18px; max-width: 600px; color: #ccc; margin-bottom: 30px; }
+        nav a:hover {
+            text-decoration: underline;
+        }
 
-    .hero .btn-container { display: flex; gap: 20px; }
-    .hero .btn-primary, .hero .btn-secondary { padding: 12px 28px; border-radius: 24px; font-weight: bold; text-decoration: none; display: inline-block; }
-    .hero .btn-primary { background: #2ee7ff; color: #000; }
-    .hero .btn-primary:hover { background: #1dc4e3; }
-    .hero .btn-secondary { background: #262b44; color: #fff; }
-    .hero .btn-secondary:hover { background: #1f2340; }
+        .hero {
+            background: url('https://via.placeholder.com/1200x400') no-repeat center center/cover;
+            height: 400px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
+        }
 
-    .product-card { background: #262b44; border-radius: 12px; padding: 30px; max-width: 900px; margin: 40px auto; display: flex; gap: 30px; align-items: center; }
-    .product-info { flex: 1; }
-    .product-info h3 { font-size: 28px; margin-bottom: 10px; }
-    .product-info p { color: #bbb; margin-bottom: 8px; }
-    .product-info .price { font-size: 24px; color: #2ee7ff; margin-bottom: 15px; }
-    .product-info .btn-view { padding: 10px 20px; background: #2ee7ff; color: #000; border-radius: 24px; text-decoration: none; font-weight: bold; }
-    .product-info .btn-view:hover { background: #1dc4e3; }
+        .hero h2 {
+            font-size: 3rem;
+        }
 
-    .product-image img { border-radius: 8px; max-width: 400px; }
+        .content {
+            padding: 40px 20px;
+            max-width: 1200px;
+            margin: auto;
+        }
 
-    footer { padding: 40px; text-align: center; background: #0f1232; color: #666; font-size: 14px; }
-  </style>
+        .card {
+            background-color: #fff;
+            padding: 20px;
+            margin: 20px 0;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        footer {
+            background-color: #1e1e1e;
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
+            margin-top: 40px;
+        }
+
+        @media (min-width: 768px) {
+            .cards {
+                display: flex;
+                gap: 20px;
+            }
+
+            .card {
+                flex: 1;
+            }
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <!-- Hela containern klickbar -->
-    <div class="logo-container" onclick="location.reload();">
-      <img src="icon.png" alt="EZ Studio Logo" />
-      <h1>EZ Studio</h1>
-    </div>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Products</a>
-      <a href="https://youtube.com" target="_blank">Support</a>
-      <a href="#">About</a>
-      <a href="#" class="btn-login">Login with Discord</a>
-    </nav>
-  </header>
+    <header>
+        <h1>EZ Studio</h1>
+        <nav>
+            <a href="#about">Om oss</a>
+            <a href="#services">Tjänster</a>
+            <a href="#contact">Kontakt</a>
+        </nav>
+    </header>
 
-  <section class="hero">
-    <h2>Upgrade Your SMP Server</h2>
-    <p>Experience the next generation of Minecraft plugins. Crafted with precision, powered by EZ Studio.</p>
-    <div class="btn-container">
-      <a href="#" class="btn-primary">Get Started</a>
-      <a href="#" class="btn-secondary">View Products</a>
-    </div>
-  </section>
+    <section class="hero">
+        <h2>Välkommen till EZ Studio</h2>
+    </section>
 
-  <section class="product-card">
-    <div class="product-info">
-      <h3>DonutSell</h3>
-      <p>Premium Plugin</p>
-      <p>A 1:1 Replica of the DonutSMP Season 2 sell with worth lore.</p>
-      <p>Complete selling system with advanced features.</p>
-      <p class="price">$2.99</p>
-      <a href="#" class="btn-view">View Details</a>
-    </div>
-    <div class="product-image">
-      <img src="b8e401bd-f388-4170-ae76-e132a42623b3.png" alt="DonutSell Screenshot" />
-    </div>
-  </section>
+    <section class="content" id="about">
+        <h2>Om oss</h2>
+        <p>EZ Studio är din partner för professionell webbdesign, grafik och multimedia. Vi skapar kreativa lösningar som hjälper ditt företag att växa online.</p>
+    </section>
 
-  <footer>
-    <p>© 2025 EZ Studio. Alla rättigheter förbehållna.</p>
-  </footer>
+    <section class="content" id="services">
+        <h2>Våra tjänster</h2>
+        <div class="cards">
+            <div class="card">
+                <h3>Webbdesign</h3>
+                <p>Responsiva och moderna hemsidor som ser bra ut på alla enheter.</p>
+            </div>
+            <div class="card">
+                <h3>Grafik</h3>
+                <p>Logotyper, banners och visuellt material för ditt företag.</p>
+            </div>
+            <div class="card">
+                <h3>Multimedia</h3>
+                <p>Video, animationer och presentationer som engagerar din publik.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="content" id="contact">
+        <h2>Kontakt</h2>
+        <p>Skicka ett mail till <a href="mailto:info@ezstudio.xyz">info@ezstudio.xyz</a> eller fyll i vårt kontaktformulär.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 EZ Studio. Alla rättigheter förbehållna.</p>
+    </footer>
 </body>
 </html>
