--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Min Enkel Hemsida</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            color: #333;
+        }
+        header {
+            background-color: #4CAF50;
+            width: 100%;
+            padding: 20px;
+            text-align: center;
+            color: white;
+        }
+        main {
+            text-align: center;
+            padding: 20px;
+        }
+        footer {
+            margin-top: auto;
+            padding: 10px;
+            background-color: #ddd;
+            width: 100%;
+            text-align: center;
+        }
+        a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Välkommen till min hemsida!</h1>
+    </header>
+    <main>
+        <p>Detta är en enkel HTML-sida skapad som exempel.</p>
+        <p>Besök <a href="https://www.example.com" target="_blank">den här länken</a> för mer information.</p>
+    </main>
+    <footer>
+        <p>&copy; 2025 Min Enkel Hemsida</p>
+    </footer>
+</body>
+</html>
